<resources>
    <string name="app_name">Chatter</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">whAoZBAIKfTFkzOIvRem7CXEJaa5iGoRIFRJf7Cm</string>
    <string name="back4app_client_key">Oby65NlD0bcrvOsKoRCPEXXyQYjgkXRyW1mCKm7R</string>

    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="follow_show">follow_show</string>
    <string name="enter_tweet_here">Enter tweet here</string>
    <string name="tweet">Tweet</string>
    <string name="clear">Clear</string>
</resources>
